--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,6 +21,7 @@
 
     <TextView
         android:id="@+id/titleTextView"
+        android:alpha="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -34,6 +35,7 @@
 
     <TextView
         android:id="@+id/nameTextview"
+        android:alpha="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -44,6 +46,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nameTextInputLayout"
+        android:alpha="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -62,6 +65,7 @@
 
     <TextView
         android:id="@+id/emailTextview"
+        android:alpha="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -71,6 +75,7 @@
 
     <com.nieelz.danielstoryapp.custom.EmailEditText
         android:id="@+id/emailTextInputLayout"
+        android:alpha="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -91,6 +96,7 @@
 
     <TextView
         android:id="@+id/passwordTextview"
+        android:alpha="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -100,6 +106,7 @@
 
     <com.nieelz.danielstoryapp.custom.PasswordEditText
         android:id="@+id/passwordTextInputLayout"
+        android:alpha="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -123,6 +130,7 @@
 
     <Button
         android:id="@+id/buttonDaftar"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
