Submission 2 Paging + maps

--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -68,4 +68,14 @@
         app:layout_constraintStart_toStartOf="@+id/previewImageView"
         app:layout_constraintTop_toBottomOf="@+id/previewImageView" />
 
+    <Button
+        android:id="@+id/button_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/location"
+        app:layout_constraintEnd_toEndOf="@+id/descTextInput"
+        app:layout_constraintStart_toStartOf="@+id/descTextInput"
+        app:layout_constraintTop_toBottomOf="@+id/descTextInput" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
